--- a/app/src/main/res/layout/home_requests_layout.xml
+++ b/app/src/main/res/layout/home_requests_layout.xml
@@ -28,7 +28,7 @@
             android:id="@+id/userProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/garage_mechanic_profile"
+            android:src="@drawable/garage_mechanicprofile"
             android:layout_marginStart="12dp"
             android:padding="8dp"
             android:adjustViewBounds="true"
@@ -42,9 +42,10 @@
             android:layout_height="wrap_content"
             android:text="Saman Perera"
             android:textColor="@color/blue"
-            android:textSize="25dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -55,30 +56,8 @@
             android:text="+94 77 123 4567 "
             android:textColor="@color/blue"
             android:textSize="14dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="50dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <ImageView
-            android:id="@+id/msgbtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/garage_msg"
-            android:padding="8dp"
-            android:layout_marginLeft="285dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <ImageView
-            android:id="@+id/phonebtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/garage_phone"
-            android:padding="8dp"
-            android:layout_marginLeft="330dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -90,7 +69,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="120dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="65dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -102,7 +81,7 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="190dp"
-            android:layout_marginTop="82dp"
+            android:layout_marginTop="62dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
