--- a/app/src/main/res/layout/home_requests_layout.xml
+++ b/app/src/main/res/layout/home_requests_layout.xml
@@ -3,7 +3,7 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="239dp"
+    android:layout_height="224dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="10dp"
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@drawable/garage_gradient_background"
+        android:backgroundTint=""
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="1dp" />
@@ -29,7 +30,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             android:src="@drawable/profile_picture"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,9 +46,10 @@
             android:layout_height="wrap_content"
             android:text="Saman Perera"
             android:textColor="@color/blue"
-            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textSize="22dp"
             android:layout_marginLeft="120dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -59,31 +61,11 @@
             android:textColor="@color/blue"
             android:textSize="14dp"
             android:layout_marginLeft="120dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:id="@+id/msgbtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/garage_msg"
-            android:padding="8dp"
-            android:layout_marginLeft="285dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:id="@+id/phonebtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/garage_phone"
-            android:padding="8dp"
-            android:layout_marginLeft="330dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/vehicle"
@@ -93,7 +75,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="120dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="65dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -105,7 +87,7 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="190dp"
-            android:layout_marginTop="82dp"
+            android:layout_marginTop="67dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -118,7 +100,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="115dp"
+            android:layout_marginTop="100dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -130,7 +112,7 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="105dp"
-            android:layout_marginTop="116dp"
+            android:layout_marginTop="101dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -146,7 +128,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="200dp"
-            android:layout_marginTop="115dp"
+            android:layout_marginTop="100dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
         <TextView
@@ -157,7 +139,7 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="290dp"
-            android:layout_marginTop="116dp"
+            android:layout_marginTop="101dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -171,7 +153,7 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="145dp"
-            android:layout_marginTop="156dp"
+            android:layout_marginTop="126dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -185,7 +167,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="125dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -197,7 +179,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="150dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -210,7 +192,7 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="127dp"
-            android:layout_marginTop="181dp"
+            android:layout_marginTop="151dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -222,7 +204,7 @@
             android:textColor="@color/ash_color"
             android:textSize="17dp"
             android:layout_marginLeft="200dp"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="150dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -234,54 +216,42 @@
             android:textColor="@color/blue"
             android:textSize="15dp"
             android:layout_marginLeft="325dp"
-            android:layout_marginTop="181dp"
+            android:layout_marginTop="151dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
 
-        <View
-            android:id="@+id/acceptbar"
-            android:layout_width="202dp"
-            android:layout_height="22dp"
-            android:background="@drawable/garage_accept_button"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="210dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-            android:id="@+id/accept"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="accept"
-            android:textColor="@color/white"
-            android:textSize="15dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="210dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-        <View
-            android:id="@+id/cancelbar"
-            android:layout_width="202dp"
-            android:layout_height="22dp"
-            android:background="@drawable/garage_cancel_button"
+
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:id="@+id/acceptbtn"
+            android:layout_marginTop="178dp"
+            android:layout_marginLeft="80dp"
+            android:text="Accept"
+            android:textSize="12sp"
+            android:background="@drawable/garage_login_btn"
+            app:backgroundTint = "@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
+
+        </Button>
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:id="@+id/cancelbtn"
+            android:layout_marginTop="178dp"
             android:layout_marginLeft="200dp"
-            android:layout_marginTop="210dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:text="Cancel"
+            android:textSize="12sp"
+            android:background="@drawable/garage_login_btn"
+            app:backgroundTint = "@null"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
 
-        <TextView
-            android:id="@+id/cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="cancel"
-            android:textColor="@color/white"
-            android:textSize="15dp"
-            android:layout_marginLeft="270dp"
-            android:layout_marginTop="210dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        </Button>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
