--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -10,16 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/profileBackground"
-        android:layout_width="match_parent"
-        android:layout_height="301dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/profile_upper_box"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <View
+            android:id="@+id/profileBackground"
+            android:layout_width="match_parent"
+            android:layout_height="301dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/profile_upper_box"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/profileName"
@@ -65,157 +65,160 @@
         </LinearLayout>
 
         <LinearLayout
-        android:id="@+id/profileItems"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/profileBackground">
+            android:id="@+id/profileItems"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profileBackground">
 
             <LinearLayout
                 android:id="@+id/earnings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="30dp"
                 android:gravity="center_vertical"
-                android:layout_marginBottom="30dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/earningsImage"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/earnings"
-                    android:layout_marginRight="40dp"/>
+                    android:layout_marginRight="40dp"
+                    android:src="@drawable/earnings" />
 
                 <TextView
                     android:id="@+id/earningsText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
                     android:text="@string/earnings"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"/>
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ratingsAndReviews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="30dp"
                 android:gravity="center_vertical"
-                android:layout_marginBottom="30dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/ratingsAndReviewsImage"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ratings"
-                    android:layout_marginRight="40dp"/>
+                    android:layout_marginRight="40dp"
+                    android:src="@drawable/ratings" />
 
                 <TextView
                     android:id="@+id/ratingsAndReviewsText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
                     android:text="@string/rat_and_rev"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"/>
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/manageServices"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="30dp"
                 android:gravity="center_vertical"
-                android:layout_marginBottom="30dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/manageServicesImage"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/services"
-                    android:layout_marginRight="40dp"/>
+                    android:layout_marginRight="40dp"
+                    android:src="@drawable/services" />
 
                 <TextView
                     android:id="@+id/manageServicesText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
                     android:text="@string/manage_services"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"/>
+                    android:textSize="20sp" />
             </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/helpAndSupport"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="30dp">
-
-            <ImageView
-                android:id="@+id/helpAndSupportImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/help_and_support"
-                android:layout_marginRight="40dp"/>
-
-            <TextView
-                android:id="@+id/helpAndSupportText"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/helpAndSupport"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Help and Support"
-                android:textSize="20sp"
-                android:gravity="center_vertical"/>
-        </LinearLayout>
+                android:layout_marginBottom="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/aboutUs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="30dp">
+                <ImageView
+                    android:id="@+id/helpAndSupportImage"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="40dp"
+                    android:src="@drawable/help_and_support" />
 
-            <ImageView
-                android:id="@+id/aboutUsImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/about_us"
-                android:layout_marginRight="40dp"/>
+                <TextView
+                    android:id="@+id/helpAndSupportText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="Help and Support"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/aboutUsText"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/aboutUs"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="About Us"
-                android:textSize="20sp"
-                android:gravity="center_vertical"/>
-        </LinearLayout>
+                android:layout_marginBottom="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/logOut"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="30dp">
+                <ImageView
+                    android:id="@+id/aboutUsImage"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="40dp"
+                    android:src="@drawable/about_us" />
 
-            <ImageView
-                android:id="@+id/logOutImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/log_out"
-                android:layout_marginRight="40dp"/>
+                <TextView
+                    android:id="@+id/aboutUsText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="About Us"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/logOutText"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/logOut"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Logout"
-                android:textSize="20sp"
-                android:gravity="center_vertical"/>
+                android:layout_marginBottom="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/logOutImage"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="40dp"
+                    android:src="@drawable/log_out" />
+
+                <TextView
+                    android:id="@+id/logOutText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="Logout"
+                    android:textSize="20sp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
         <RatingBar
             android:id="@+id/ratingBar2"
@@ -226,17 +229,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/viewProfileText"
+        <LinearLayout
+            android:id="@+id/viewProfileL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="80dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center_vertical"
-            android:text="View Profile"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/ratingBar2"
-            app:layout_constraintEnd_toStartOf="@+id/circularImageView" />
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="196dp"
+            app:layout_constraintStart_toStartOf="@+id/profileBackground"
+            app:layout_constraintTop_toTopOf="@+id/profileBackground">
+
+            <TextView
+                android:id="@+id/viewProfileText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="80dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center_vertical"
+                android:text="View Profile"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/ratingBar2"
+                app:layout_constraintEnd_toStartOf="@+id/circularImageView" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
