--- a/app/src/main/res/layout/item_layout_manageservices.xml
+++ b/app/src/main/res/layout/item_layout_manageservices.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="10dp"
-            android:text="Title"
+            android:text="Tire"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
