--- a/app/src/main/res/layout/ratings_item.xml
+++ b/app/src/main/res/layout/ratings_item.xml
@@ -1,69 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_margin="20dp">-->
 
-    <LinearLayout
-        android:id="@+id/lyRatingItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/item_border"
-        android:orientation="vertical">
-<LinearLayout
+<!--    <LinearLayout-->
+<!--        android:id="@+id/lyRatingItem"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/item_border"-->
+<!--        android:orientation="vertical">-->
+<!--<LinearLayout-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
+
+<!--    <RatingBar-->
+<!--        android:id="@+id/ratingBar3"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content" />-->
+<!--</LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:addStatesFromChildren="true"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginTop="10dp">-->
+
+
+
+<!--            <TextView-->
+<!--                android:id="@+id/rating_name"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:maxLines="3"-->
+<!--                android:text="Alexander"-->
+<!--                android:textSize="15sp"-->
+<!--                android:layout_marginStart="25dp"/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/rating_date"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:maxLines="3"-->
+<!--                android:text="25/08/2023"-->
+<!--                android:textSize="15sp"-->
+<!--                android:layout_marginStart="180dp" />-->
+
+<!--        </LinearLayout>-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/rating_review"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:maxLines="3"-->
+<!--                android:text="Excellent service"-->
+<!--                android:textSize="15sp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:layout_marginStart="25dp"-->
+<!--                android:layout_marginBottom="5dp"/>-->
+
+<!--        </LinearLayout>-->
+<!--    </LinearLayout>-->
+
+<!--</RelativeLayout>-->
+<androidx.cardview.widget.CardView
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="170dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp"
+    >
 
-    <RatingBar
-        android:id="@+id/ratingBar3"
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+
+
+        <RatingBar
+            android:id="@+id/ratingsBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="4"
+            android:stepSize="1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            style="?android:attr/ratingBarStyleSmall"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints"/>
+
+        <TextView
+            android:id="@+id/ratingName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="55dp"
+            android:text="Saman Perera "
+            android:textColor="@color/blue"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TextSizeCheck" />
+
+        <TextView
+            android:id="@+id/ratingDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="280dp"
+            android:layout_marginTop="55dp"
+            android:text="25/08/2023"
+            android:textColor="@color/ash_color"
+            android:textSize="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TextSizeCheck" />
+
+        <TextView
+            android:id="@+id/ratingComments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:addStatesFromChildren="true"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="110dp"
+            android:text="Excellent Service.Efficient, fast and friendly.
+                   Best of Luck!"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TextSizeCheck" />
 
 
 
-            <TextView
-                android:id="@+id/rating_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:text="Alexander"
-                android:textSize="15sp"
-                android:layout_marginStart="25dp"/>
-            <TextView
-                android:id="@+id/rating_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:text="25/08/2023"
-                android:textSize="15sp"
-                android:layout_marginStart="180dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/rating_review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:text="Excellent service"
-                android:textSize="15sp"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginBottom="5dp"/>
-
-        </LinearLayout>
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
